--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Sebastian Reinhard</title>
+    <link rel="shortcut icon" type="image/png" href="favicon.png"/>
     <link rel="stylesheet" href="./normalize.css" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400+600" rel="stylesheet">
     <style>
