Add responsive resolution avatars

--- a/index.html
+++ b/index.html
@@ -40,9 +40,13 @@
 <body>
     <div class="container">
         <div class="title-section">
-
-                <img id="avatar" width="100" src="avatar.jpg">
-                <h1>Sebastian Reinhard</h1>
+            <img id="avatar" width="100"
+                src="avatar_1x.jpg"
+                srcset="
+                    avatar_1x.jpg 1x,
+                    avatar_2x.jpg 2x,
+                    avatar_4x.jpg 4x">
+            <h1>Sebastian Reinhard</h1>
         </div>
         <p>
             I should really do something with this page at some point.
