Increase line spacing

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <style>
         body {
             font-family: "Open Sans", sans-serif;
+            line-height: 2em;
         }
 
         h1,h2,h3 {
