--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         body {
             font-family: "Open Sans", sans-serif;
             line-height: 2em;
+            color: #333;
         }
 
         h1,h2,h3 {
