Make links bold

--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
         #avatar {
             border-radius: 200px;
         }
+
+        a {
+            font-weight: 600;
+        }
     </style>
 </head>
 <body>
