Change copy, add email

--- a/index.html
+++ b/index.html
@@ -55,13 +55,14 @@
             <h1>Sebastian Reinhard</h1>
         </div>
         <p>
-            I should really do something with this page at some point.
+            Hi there! I'm a software engineer based in Oslo, Norway.
         </p>
         <p>
-            In the meantime, you can check out my
+            Check out my
             <a href="https://github.com/sebbert">GitHub</a>,
             <a href="https://soundcloud.com/redubb">SoundCloud</a> and/or
-            <a href="https://www.pouet.net/user.php?who=96173">Pouet</a> profile.
+            <a href="https://www.pouet.net/user.php?who=96173">Pouet</a> profile,
+            or send me an email at <a href="mailto:sebastian@sebbert.me">sebastian@sebbert.me</a> if you want to get in touch.
         </p>
     </div>
 </body>
