--- a/notiontest.html
+++ b/notiontest.html
@@ -10,7 +10,9 @@
 </head>
 
 <body>
-    <h1>This is not the embed you are looking for</h1>
+    <iframe src="https://www.notion.so/Notion-test-8808e835a478495ca95b6fa403224e03"
+        sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts" width="800" height="600"
+        frameborder="0"></iframe>
 </body>
 
 </html>
