--- a/index.html
+++ b/index.html
@@ -46,22 +46,17 @@
 <body>
     <div class="container">
         <div class="title-section">
-            <img id="avatar" width="100"
-                src="avatar_1x.jpg"
-                srcset="
-                    avatar_1x.jpg 1x,
-                    avatar_2x.jpg 2x,
-                    avatar_4x.jpg 4x">
+            <img id="avatar" width="100" height="100" src="avatar.jpg" />
             <h1>Sebastian Reinhard</h1>
         </div>
         <p>
             Hi there! I'm a software engineer based in Oslo, Norway.
         </p>
         <p>
-            Check out my
+            Find me on
             <a href="https://github.com/sebbert">GitHub</a>,
-            <a href="https://soundcloud.com/redubb">SoundCloud</a> and/or
-            <a href="https://www.pouet.net/user.php?who=96173">Pouet</a> profile,
+            <a href="https://soundcloud.com/redubb">SoundCloud</a> or
+            <a href="https://www.pouet.net/user.php?who=96173">Pouet</a>,
             or send me an email at <a href="mailto:sebastian@sebbert.me">sebastian@sebbert.me</a> if you want to get in touch.
         </p>
     </div>
